--- a/IsraelHiking.Web/wwwroot/controllers/search.css
+++ b/IsraelHiking.Web/wwwroot/controllers/search.css
@@ -1,5 +1,5 @@
 ﻿.search-control-container {
-    z-index: 8;
+    z-index: 1000;
 }
 
 .search-input {
